--- a/index.html
+++ b/index.html
@@ -81,7 +81,54 @@
 </header>
 <!-- .end Header -->
 
+<!-- image slider start here -->
+<div class="slider">
+    <div class="slides">
+        <!-- radio button starts here -->
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <input type="radio" name="radio-btn" id="radio4">
+        <!-- radio button ends here -->
+        <!-- slide images starts here -->
+        <div class="slide first">
+            <img src="./images/slide-image-1.jpg" alt="">
+        </div>
+        <div class="slide">
+            <img src="./images/slide-image-2.jpg" alt="">
+        </div>
+        <div class="slide">
+            <img src="./images/slide-image-3.jpg" alt="">
+        </div>
+        <div class="slide">
+            <img src="./images/slide-image-4.jpg" alt="">
+        </div>
+        <!-- slide images ends here -->
+        <!-- automatic nav starts here -->
+        <div class="navigation-auto">
+            <div class="auto-btn1"></div>
+            <div class="auto-btn2"></div>
+            <div class="auto-btn3"></div>
+            <div class="auto-btn4"></div>
+        </div>
+        <!-- automatic nav ends here -->
+        <!-- manual nav starts here -->
+        <div class="navigation-manual">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+        </div>    
+        <!-- manual nav ends here -->
 
+    </div>
+
+</div>
+<!-- image slider ends here -->
+
+<div>
+    <h1>sabiq</h1>
+</div>
 <script src="./Js/Index.js"></script>
 </body>
 </html>
