Add slide content

--- a/index.html
+++ b/index.html
@@ -92,15 +92,32 @@
         <!-- radio button ends here -->
         <!-- slide images starts here -->
         <div class="slide first">
+            <div class="slide-content">
+                <h1 class="title">OPEN THE DOOR TO SUCCESS</h1>
+                <p class="subtitle">We offer you thousads of jobs in most popular industries</p>
+                <a href="./services.html" class="button circular yellow">Enroll Now</a>
+            </div>
             <img src="./images/slide-image-1.jpg" alt="">
         </div>
         <div class="slide">
+            <div class="slide-content">
+                <h1 class="title">OPEN THE DOOR TO SUCCESS</h1>
+                <p class="subtitle">We offer you thousads of jobs in most popular industries</p>
+            </div>
             <img src="./images/slide-image-2.jpg" alt="">
         </div>
         <div class="slide">
+             <div class="slide-content">
+                <h1 class="title">OPEN THE DOOR TO SUCCESS</h1>
+                <p class="subtitle">We offer you thousads of jobs in most popular industries</p>
+            </div>
             <img src="./images/slide-image-3.jpg" alt="">
         </div>
         <div class="slide">
+             <div class="slide-content">
+                <h1 class="title">OPEN THE DOOR TO SUCCESS</h1>
+                <p class="subtitle">We offer you thousads of jobs in most popular industries</p>
+            </div>
             <img src="./images/slide-image-4.jpg" alt="">
         </div>
         <!-- slide images ends here -->
@@ -126,9 +143,6 @@
 </div>
 <!-- image slider ends here -->
 
-<div>
-    <h1>sabiq</h1>
-</div>
 <script src="./Js/Index.js"></script>
 </body>
 </html>
