Create oru service and why choose us sections

--- a/index.html
+++ b/index.html
@@ -143,6 +143,121 @@
 </div>
 <!-- image slider ends here -->
 
+<!-- our Services starts here -->
+<section class="services">
+    <div class="section-title center">
+        <br><br><br><br>
+        <small>What we do</small>
+        <h2>Our Services</h2>
+        <span class="d-line"></span>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="service-2">
+                    <i class="icon-solar-maintenance"></i>
+                    <a href="./service-MEP.html" class="call-to-action small">
+                        <i class="feather-arrow-right"></i>
+                    </a>
+                    <div class="description">
+                        <h5>M.E.P</h5>
+                        <p>Mechanical, Electrical and Plumbing Solutions. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="service-2">
+                    <img src="images/icons/light.png" style="width:90px;height: 90px;margin-right: 40px;">
+                    <a href="./service-Illumination.html" class="call-to-action small">
+                        <i class="feather-arrow-right"></i>
+                    </a>
+                    <div class="description">
+                        <h5>Lights and Illumination</h5>
+                        <p>Lighting solutions for any Event.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="service-2">
+                    <i class="icon-solar-system"></i>
+                    <a href="./service-Solar.html" class="call-to-action small">
+                        <i class="feather-arrow-right"></i>
+                    </a>
+                    <div class="description">
+                        <h5>Solar</h5>
+                        <p> Tailor-made design and solutioning of solar
+                            power plants.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="service-2">
+                    <img src="images/icons/networking.png" style="width:90px;height: 90px;margin-right: 40px;">
+                    <a href="./service-Networking.html" class="call-to-action small">
+                        <i class="feather-arrow-right"></i>
+                    </a>
+                    <div class="description">
+                        <h5>Networking</h5>
+                        <p> We design, manufacture, Integrate and install innovative wireless solutions, worldwide.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!-- our Services ends here -->
+
+<!-- why choose us starts -->
+<section class="image-text">
+    <div class="container">
+        <div class="section-title center">
+
+
+            <small>Who we are</small>
+            <h2>Why chose us</h2>
+
+
+            <span class="d-line"></span>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-md-7">
+                <div class="image square">
+                    <img src="images/servicebanner.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-5">
+
+
+                <div class="text">
+                    <p style="text-align: justify">Extreme Energy Environment service is an associate company of <b>CB Group Global
+                    </b> , Abu
+                        Dhabi. EEE is an electromechanical contracting company established in 2010 and
+                        recognized by major consultants, contractors and customers throughout the UAE. We have
+                        carried out successful projects in governmental and private sectors</p>
+                    <div class="big-info-box left">
+                        <i class="feather-check"></i>
+                        <span> OHSAS 18001 Certified for Health and Safety Managment</span>
+                    </div>
+                    <div class="big-info-box left">
+                        <i class="feather-check"></i>
+                        <span>iSO 14001 certified for Environmental Managment</span>
+                    </div>
+                    <div class="big-info-box left">
+                        <i class="feather-check"></i>
+                        <span>ISO 9001 certified for Quality Management</span>
+                    </div>
+                    <div class="big-info-box left">
+                        <i class="feather-check"></i>
+                        <span>9+ years experience</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- why choose us ends -->
 <script src="./Js/Index.js"></script>
 </body>
 </html>
