changes in Our Services

--- a/index.html
+++ b/index.html
@@ -155,51 +155,129 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="service-2">
+                     <img src="images/job-seeker.png" style="width:90px;height: 90px;margin-right: 40px;">
                     <i class="icon-solar-maintenance"></i>
                     <a href="./service-MEP.html" class="call-to-action small">
-                        <i class="feather-arrow-right"></i>
+                        <i class="feather-arrow-right">
+                            <img src="images/next.png" alt="">
+                        </i>
                     </a>
                     <div class="description">
-                        <h5>M.E.P</h5>
-                        <p>Mechanical, Electrical and Plumbing Solutions. </p>
+                        <h5>Executive Search &
+                            Selection</h5>
+                        <p>Executive Search &
+                            SelectionExecutive Search &
+                            Selection </p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="service-2">
-                    <img src="images/icons/light.png" style="width:90px;height: 90px;margin-right: 40px;">
+                    <img src="images/grp.png" style="width:90px;height: 90px;margin-right: 40px;">
                     <a href="./service-Illumination.html" class="call-to-action small">
-                        <i class="feather-arrow-right"></i>
+                        <i class="feather-arrow-right">
+                            <img src="images/next.png" alt="">
+                        </i>
                     </a>
                     <div class="description">
-                        <h5>Lights and Illumination</h5>
-                        <p>Lighting solutions for any Event.</p>
+                        <h5>Mid Level Staffing</h5>
+                        <p>Permanent & Flexible
+                            Solutions</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-6">
                 <div class="service-2">
+                    <img src="images/authentication.png" style="width:90px;height: 90px;margin-right: 40px;">
                     <i class="icon-solar-system"></i>
                     <a href="./service-Solar.html" class="call-to-action small">
-                        <i class="feather-arrow-right"></i>
+                        <i class="feather-arrow-right">
+                            <img src="images/next.png" alt="">
+                        </i>
                     </a>
                     <div class="description">
-                        <h5>Solar</h5>
-                        <p> Tailor-made design and solutioning of solar
-                            power plants.</p>
+                        <h5>Confidential & Authentic
+                            Background Verification</h5>
+                        <p> Confidential & Authentic
+                            & Authentic
+                            </p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="service-2">
-                    <img src="images/icons/networking.png" style="width:90px;height: 90px;margin-right: 40px;">
+                    <img src="images/meeting.png" style="width:90px;height: 90px;margin-right: 40px;">
                     <a href="./service-Networking.html" class="call-to-action small">
-                        <i class="feather-arrow-right"></i>
+                        <i class="feather-arrow-right">
+                            <img src="images/next.png" alt="">
+                        </i>
                     </a>
                     <div class="description">
-                        <h5>Networking</h5>
-                        <p> We design, manufacture, Integrate and install innovative wireless solutions, worldwide.</p>
+                        <h5>We Consult For
+                           </h5>
+                        <p> recruitement
+                            selection and onboarding of
+                            workers globally</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="service-2">
+                    <img src="images/team.png" style="width:90px;height: 90px;margin-right: 40px;">
+
+                    <i class="icon-solar-maintenance"></i>
+                    <a href="./service-MEP.html" class="call-to-action small">
+                        <i class="feather-arrow-right">
+                            <img src="images/next.png" alt="">
+                        </i>
+                    </a>
+                    <div class="description">
+                        <h5>Bulk Overseas
+                            Recruitement</h5>
+                        <p>Bulk Overseas
+                            RecruitementBulk Overseas
+                            Recruitement </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="service-2">
+                    <img src="images/clipboard.png" style="width:90px;height: 90px;margin-right: 40px;">
+
+                    <i class="icon-solar-maintenance"></i>
+                    <a href="./service-MEP.html" class="call-to-action small">
+                        <i class="feather-arrow-right">
+                            <img src="images/next.png" alt="">
+                        </i>
+                    </a>
+                    <div class="description">
+                        <h5>Scientific Candidate
+                            Assessment Tools</h5>
+                        <p>Scientific Candidate
+                            Assessment ToolsScientific Candidate
+                            Assessment Tools </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="row">
+                <div class="col-lg-6">
+                    <div class="service-2">
+                        <img src="images/team copy.png" style="width:90px;height: 90px;margin-right: 40px;">
+
+                        <i class="icon-solar-maintenance"></i>
+                        <a href="./service-MEP.html" class="call-to-action small">
+                            <i class="feather-arrow-right">
+                                <img src="images/next.png" alt="">
+                            </i>
+                        </a>
+                        <div class="description">
+                            <h5>Outsource
+                                HR Manager</h5>
+                            <p>Outsource
+                                HR ManagerOutsource
+                                HR Manager </p>
+                        </div>
                     </div>
                 </div>
             </div>
