Index page changes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="">
+    <!-- Icons -->
+    <link rel="stylesheet" href="css/feather-icons.css">
+    <link rel="stylesheet" href="css/flaticon-icons.css">
+    <!--<link href="css/aos.css" rel="stylesheet">-->
 </head>
 <body>
 
@@ -46,7 +50,7 @@
                     </li>
 
                     <li>
-                        <a href="clients.html">About<i class="feather-chevron-right"></i></a>
+                        <a href="aboutus.html">About us<i class="feather-chevron-right"></i></a>
                     </li>
 
                     <li>
